<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beer Finder</string>
    <string name="home">Home</string>
    <string name="search_by_brand_label">Search</string>
    <string name="search_by_zip_label">Search By Zip</string>
    <string name="explore_location_area">Explore Local Area</string>
    <string name="title">Title</string>
    <string name="phone">Phone</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="new_beer">New</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="beer_label_name">Name</string>
    <string name="beer_label_email">Email</string>
    <string name="beer_label_title">Title</string>
    <string name="beer_label_phone">Phone</string>
    <string name="beer_label_twitter">Twitter</string>
    <string name="toolbar_details">Details</string>
    <string name="contact_dynamicValue">&lt;&lt; text >></string>
    <string name="delete_confirmation">Are you sure you want delete this beer?</string>
    <string name="item_icon_description">Item Icon</string>
    <string name="logo_description">Logo</string>
    <string name="use_current_zip_label">Use Current Zip</string>
    <string name="search_by_zip_go_label">Go!</string>
    <string name="enter_zip_label">Enter Zip</string>
    <string name="list_results_label">List Results</string>
    <string name="map_results_label">Map Results</string>
    <string name="venue_label">Venue</string>
    <string name="todo">TODO</string>
    <string name="working_spinner">Working…</string>
    <string name="getting_current_zip">Getting current zip…</string>
    <string name="beer_label">Beer</string>
    <string name="beers_label">Beers</string>
    <string name="search_term">Beer Search Terms</string>
    <string name="beer_hops">Hops</string>
    <string name="beer_body">Body</string>
    <string name="beer_color">Color</string>
    <string name="beer_description">Description</string>
    <string name="search_hint">Search Venues</string>
    <string name="change_location_label">Custom Location</string>
    <string name="update_zip">Update Zipcode</string>
    <string name="use_device_loation_label">Use Device Location</string>


</resources>