<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_screen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
			    android:id="@+id/brand_name"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_margin="4dp"
			    android:hint="@string/search_term"
			    android:inputType="text"
			    android:textSize="24dp" />
            
            <Button
                android:id="@+id/search_by_brand_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/MainButton"
                android:text="@string/search_by_brand_label" />

            <Button
                android:id="@+id/search_by_zip_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/MainButton"
                android:text="@string/explore_location_area" />
            
            <Button
                android:id="@+id/change_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/MainButton"
                android:text="@string/change_location_label" />
            
        </LinearLayout>
    </LinearLayout>

</ScrollView>