<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/map_results_toolbar"
    style="@style/Toolbar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/toolbar_cancel_button"
        style="@style/ToolbarButton"
        android:layout_weight="0"
        android:onClick="cancelClicked"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/toolbar_title"
        style="@style/ToolbarTitle"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/new_beer" />

    <Button
        android:id="@+id/toolbar_list_results_button"
        style="@style/ToolbarButton"
        android:layout_width="wrap_content"
        android:onClick="listResultsClicked"
        android:text="@string/list_results_label" />

</LinearLayout>