<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:textColor="@color/text_color_black" >

    <include layout="@layout/beer_toolbar" />

    <ScrollView
        android:id="@+id/venue_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_background"
            android:orientation="vertical" >

     <!-- Hops -->
         
                <TextView
                    android:id="@+id/beer_hops"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/beer_hops"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="18dp"
                />
                
                <ImageView 
                    android:id="@+id/beer_hops_star"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
            		android:layout_marginTop="4dp"
                    android:layout_gravity="center"
                    android:src="@drawable/na"
                />
                
            
            
    <!-- Body -->
        
                <TextView
                    android:id="@+id/beer_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Body"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="18dp"
                />
                
                <ImageView 
                    android:id="@+id/beer_body_star"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
            		android:layout_marginTop="4dp"
                    android:layout_gravity="center"
                    android:src="@drawable/na"
                />
                
          
            
    <!-- Color -->
       
                <TextView
                    android:id="@+id/beer_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/beer_color"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="18dp"
                />
                
                <ImageView 
                    android:id="@+id/beer_color_star"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
            		android:layout_marginTop="4dp"
                    android:layout_gravity="center"
                    android:src="@drawable/na"
                />
            
            
            
            
        	<TextView
                android:id="@+id/beer_desciption_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beer_description"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20dp" 
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
            />
            
			<TextView
                android:id="@+id/beer_desciption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
            />
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>